# MemoryLane

./: .dockerignore  .gitignore  Dockerfile  README.md  cors.json  deployment.tf  deployment.yaml  origins-url.json  pyproject.toml  service-account.json  vercel.json
backend/: app.py  constants.py  global_constants.py  requirements.txt  vercel.json
backend/graphql/: auth_schema.py  schema.py
backend/graphql/mutations/: upload_image_mutation.py
backend/graphql/mutations/auth/: auth_users.py
backend/graphql/queries/: fetch_image_query.py  healthcheck_query.py
backend/graphql/types/: upload_file_response.py
backend/providers/: auth.py  auth_provider.py  gcp_image_fetch.py  gcp_upload.py  image_delete.py
backend/routers/: auth_router.py  gcp_upload_router.py  photo_router.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/Pages/: HomePage.tsx
frontend/src/Pages/Auth/: Login.tsx
frontend/src/Pages/Components/: Banner.tsx  LoginComponent.tsx
frontend/src/components/: background.tsx  fileUploader.tsx  memoryLane.tsx  sucessMessage.tsx  tempComponent.tsx
frontend/src/components/Book/: flipbookStyles.css  page.tsx  pictureBook.tsx
frontend/src/graphql/mutations/: auth-mutation.tsx  photo-delete-mutation.tsx  (+1 more)
frontend/src/hooks/: useAuth.tsx
frontend/src/layout/: AuthLayout.tsx  ProtectedLayout.tsx  RootLayout.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/types/: User.tsx  UserLoginInfo.tsx  UserSignupInfo.tsx
(+4 files in other folders)
